[gd_scene load_steps=4 format=3 uid="uid://b8ogwotn6nsdk"]

[ext_resource type="Script" path="res://world/interactable/sinking-wall/sinking_wall.gd" id="1_hu6mh"]
[ext_resource type="Texture2D" uid="uid://dymucenpxmluo" path="res://icon.svg" id="2_8trb1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_go6rt"]
size = Vector2(117, 116)

[node name="sinkingWall" type="StaticBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_hu6mh")

[node name="hitBox" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -2)
shape = SubResource("RectangleShape2D_go6rt")

[node name="unsunkWall" type="Sprite2D" parent="."]
texture = ExtResource("2_8trb1")

[node name="sunkenWall" type="Sprite2D" parent="."]
position = Vector2(0, 55.5)
scale = Vector2(1, 0.132812)
texture = ExtResource("2_8trb1")

[node name="wallTimer" type="Timer" parent="."]
wait_time = 8.0

[connection signal="timeout" from="wallTimer" to="." method="raiseWall"]
